--- a/index.html
+++ b/index.html
@@ -3,199 +3,142 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Events</title>
+    <title>ClearKey DRM Player</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/3.2.0/shaka-player.compiled.js"></script>
     <style>
-        /* Resetting default styles */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
+        /* Style for the video container */
+        body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+            text-align: center;
         }
 
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #004b87; /* Mumbai Indians Blue */
-            color: #fff;
-            overflow-x: hidden;
-            display: flex;
-            flex-direction: column;
+        /* Style for the Join Telegram button */
+        #joinTelegramButton {
+            background-color: #0088cc;
+            color: white;
+            padding: 10px 20px;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            margin-top: 20px;
+        }
+
+        #joinTelegramButton:hover {
+            background-color: #0077b5;
+        }
+
+        /* Style for the pop-up modal */
+        #telegramPopup {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
             justify-content: center;
             align-items: center;
         }
 
-        h1 {
-            font-size: 40px;
-            color: #ffcc00; /* Mumbai Indians Yellow/Gold */
-            font-weight: 700;
-            letter-spacing: 2px;
-            text-transform: uppercase;
-            text-align: center;
-            margin-top: 20px;
-            margin-bottom: 40px;
-        }
-
-        .event-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 30px;
+        #popupContent {
+            background-color: white;
             padding: 20px;
-            justify-content: center;
-            width: 90%;
-            max-width: 1200px;
+            border-radius: 8px;
+            width: 300px;
+            text-align: center;
         }
 
-        .event-card {
-            background: #1f1f1f;
-            border-radius: 15px;
-            overflow: hidden;
-            position: relative;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-            transition: all 0.3s ease-in-out;
+        #closePopupButton {
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            background: transparent;
+            border: none;
+            font-size: 20px;
             cursor: pointer;
         }
 
-        .event-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.7);
-        }
-
-        .event-card img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .event-card img:hover {
-            transform: scale(1.1);
-        }
-
-        .event-card-content {
-            padding: 20px;
-        }
-
-        .event-title {
-            font-size: 22px;
-            color: #fff;
-            font-weight: bold;
-            margin-bottom: 15px;
-        }
-
-        .event-league {
-            font-size: 16px;
-            color: #bbb;
-            margin-bottom: 20px;
-        }
-
-        .live-badge {
-            position: absolute;
-            top: 15px;
-            right: 15px;
-            background-color: #ffcc00; /* Mumbai Indians Yellow */
-            color: #004b87; /* Mumbai Indians Blue */
-            padding: 5px 10px;
-            border-radius: 25px;
-            font-weight: 600;
-            font-size: 14px;
-            animation: pulse 1.5s infinite ease-in-out;
-        }
-
-        @keyframes pulse {
-            0% {
-                transform: scale(1);
-                opacity: 1;
-            }
-            50% {
-                transform: scale(1.1);
-                opacity: 0.7;
-            }
-            100% {
-                transform: scale(1);
-                opacity: 1;
-            }
-        }
-
-        .btn-group {
-            display: flex;
-            justify-content: space-between;
-            gap: 10px;
-            margin-top: 10px;
-        }
-
-        .watch-btn, .ad-free-btn {
-            background: linear-gradient(90deg, #004b87, #ffcc00); /* Mumbai Indians Gradient */
-            padding: 12px 20px;
-            border-radius: 30px;
-            color: #fff;
-            font-weight: 600;
+        /* Style for the Telegram link inside the popup */
+        #telegramLink {
+            color: #0088cc;
             text-decoration: none;
-            text-align: center;
-            transition: all 0.3s ease;
-            flex-grow: 1;
+            font-weight: bold;
         }
 
-        .watch-btn:hover, .ad-free-btn:hover {
-            transform: translateY(-5px);
-            background: linear-gradient(90deg, #ffcc00, #004b87); /* Reverse Gradient for Hover */
+        #telegramLink:hover {
+            text-decoration: underline;
         }
-
-        .watch-btn {
-            margin-right: 10px;
-        }
-
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 30px;
-            }
-        }
-
     </style>
 </head>
 <body>
 
-    <h1>Live Sports Events</h1>
-    <div class="event-container" id="events"></div>
+    <h1>ClearKey DRM Video Player</h1>
+    <video id="video" width="640" height="360" controls></video>
+
+    <!-- Button to trigger the pop-up -->
+    <button id="joinTelegramButton">Join Our Telegram Channel</button>
+
+    <!-- Pop-up Modal -->
+    <div id="telegramPopup">
+        <div id="popupContent">
+            <button id="closePopupButton">X</button>
+            <p>Click the link below to join our Telegram Channel:</p>
+            <a id="telegramLink" href="https://t.me/+lkbpBqFd0FljNzJl" target="_blank">Join Telegram</a>
+        </div>
+    </div>
+
     <script>
-        async function fetchEvents() {
-            try {
-                const response = await fetch("https://raw.githubusercontent.com/drmlive/fancode-live-events/refs/heads/main/fancode.json");
-                const data = await response.json();
+        // Initialize the Shaka Player after the page loads
+        window.onload = function () {
+            var video = document.getElementById('video');
+            var player = new shaka.Player(video);
 
-                const container = document.getElementById("events");
-                container.innerHTML = "";
-
-                data.matches.forEach(event => {
-                    const eventDiv = document.createElement("div");
-                    eventDiv.classList.add("event-card");
-
-                    let eventDate = new Date(event.startTime);
-                    let formattedDate = eventDate.toLocaleDateString();
-                    let formattedTime = eventDate.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-                    let isLive = event.status === "LIVE";
-                    let videoLink = event.dai_url ? `https://teamrohitofficalnew.netlify.app?videoUrl=${encodeURIComponent(event.dai_url)}` : "#";
-
-                    eventDiv.innerHTML = `
-                        <img src="${event.src}" alt="${event.title}">
-                        ${isLive ? `<div class="live-badge">LIVE</div>` : ""}
-                        <div class="event-card-content">
-                            <div class="event-title">${event.title}</div>
-                            <div class="event-league">${event.event_name}</div>
-                            <div class="btn-group">
-                                ${event.dai_url ? `<a href="${videoLink}" target="_blank" class="watch-btn">Watch Now</a>` : ''}
-                                ${event.dai_url ? `<a href="${videoLink}" target="_blank" class="ad-free-btn">Ad-Free</a>` : ''}
-                            </div>
-                        </div>
-                    `;
-
-                    container.appendChild(eventDiv);
+            // Check if the browser supports the required DRM
+            if (shaka.Player.isBrowserSupported()) {
+                // Attach the player to the video element
+                player.configure({
+                    drm: {
+                        clearKeys: {
+                            '1779c27b9d077a3ba0c9cc1bb9a94b9f': 'cc5cf3b7928fb9e0a1ee6a8b566f0a8e' // ClearKey license key
+                        }
+                    }
                 });
 
-            } catch (error) {
-                console.error("Error fetching events:", error);
+                // Load the MPD URL
+                player.load('https://a201aivottlinear-a.akamaihd.net/OTTB/lhr-nitro/clients/dash/enc/f60kqesunw/out/v1/a435ed7a00f947deb4369b46d8f2fb70/cenc.mpd?|drmScheme=clearkey&drmLicense=1779c27b9d077a3ba0c9cc1bb9a94b9f:cc5cf3b7928fb9e0a1ee6a8b566f0a8e')
+                    .then(function () {
+                        console.log('The video has loaded successfully!');
+                    })
+                    .catch(function (error) {
+                        console.error('Error loading the video', error);
+                    });
+            } else {
+                console.error('Browser not supported');
             }
-        }
+        };
 
-        fetchEvents();
+        // Show the pop-up when the button is clicked
+        var joinTelegramButton = document.getElementById('joinTelegramButton');
+        var telegramPopup = document.getElementById('telegramPopup');
+        var closePopupButton = document.getElementById('closePopupButton');
+
+        joinTelegramButton.onclick = function() {
+            telegramPopup.style.display = 'flex'; // Show the pop-up
+        };
+
+        // Close the pop-up when the close button (X) is clicked
+        closePopupButton.onclick = function() {
+            telegramPopup.style.display = 'none'; // Hide the pop-up
+        };
+
+        // Close the pop-up if user clicks outside the modal content
+        window.onclick = function(event) {
+            if (event.target == telegramPopup) {
+                telegramPopup.style.display = 'none';
+            }
+        };
     </script>
 
 </body>
