--- a/index.html
+++ b/index.html
@@ -3,143 +3,202 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ClearKey DRM Player</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/3.2.0/shaka-player.compiled.js"></script>
+    <title>TEAMROHITOFFICAL45</title>
     <style>
-        /* Style for the video container */
+        /* General Page Styling */
         body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-            text-align: center;
-        }
-
-        /* Style for the Join Telegram button */
-        #joinTelegramButton {
-            background-color: #0088cc;
-            color: white;
-            padding: 10px 20px;
-            font-size: 16px;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-            margin-top: 20px;
-        }
-
-        #joinTelegramButton:hover {
-            background-color: #0077b5;
-        }
-
-        /* Style for the pop-up modal */
-        #telegramPopup {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            justify-content: center;
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(135deg, #242424, #3b5998);
+            color: #fff;
+            display: flex;
+            flex-direction: column;
             align-items: center;
-        }
-
-        #popupContent {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            width: 300px;
+            justify-content: center;
+            min-height: 100vh;
             text-align: center;
         }
 
-        #closePopupButton {
-            position: absolute;
-            top: 5px;
-            right: 5px;
-            background: transparent;
-            border: none;
-            font-size: 20px;
-            cursor: pointer;
+        /* Bingewav Sports Logo Section */
+        .logo-container {
+            background: #000; /* Black background for the logo */
+            padding: 15px;
+            border-radius: 10px;
+            margin-bottom: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
         }
 
-        /* Style for the Telegram link inside the popup */
-        #telegramLink {
-            color: #0088cc;
+        .logo-container img {
+            width: 220px; /* Adjust the logo size */
+            height: auto;
+        }
+
+        /* Video Player Styling */
+        .player-container {
+            width: 95%;
+            max-width: 1200px;
+            margin: 20px auto;
+            box-shadow: 0 6px 25px rgba(0, 0, 0, 0.4);
+            border-radius: 15px;
+            overflow: hidden;
+            background: #000; /* Black background behind the video for better focus */
+        }
+
+        .player-container iframe {
+            border-radius: 15px;
+        }
+
+        /* Stream Issue Section */
+        .stream-issue {
+            margin-top: 20px;
+            padding: 15px 20px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 10px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            font-size: 16px;
+            color: #fff;
+            width: fit-content;
+            text-align: center;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+        }
+
+        .stream-issue a {
+            color: #00c1ff;
             text-decoration: none;
             font-weight: bold;
         }
 
-        #telegramLink:hover {
+        .stream-issue a:hover {
             text-decoration: underline;
         }
+
+        /* Credits Section */
+        .credits {
+            margin-top: 25px;
+            padding: 15px 25px;
+            background: rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 15px;
+            font-size: 16px;
+            color: #fff;
+            width: fit-content;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+            display: inline-block;
+        }
+
+        .credits-title {
+            font-size: 18px;
+            font-weight: bold;
+            margin-bottom: 8px;
+        }
+
+        .credits a {
+            color: #ffcc00;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .credits a:hover {
+            text-decoration: underline;
+        }
+
+        /* Responsive Adjustments */
+        @media (max-width: 768px) {
+            .logo-container img {
+                width: 180px;
+            }
+
+            .credits, .stream-issue {
+                font-size: 14px;
+                padding: 10px 20px;
+            }
+
+            .credits-title {
+                font-size: 16px;
+            }
+        }
     </style>
+    <style type="text/css">
+        * {user-select: auto !important; -webkit-user-select: auto !important;}
+    </style>
+    <input type="hidden" id="inject_idm_text_selection">
 </head>
 <body>
 
-    <h1>ClearKey DRM Video Player</h1>
-    <video id="video" width="640" height="360" controls></video>
+   <!-- Video Player Section -->
+   <div class="player-container">
+       <div style="padding:56.25% 0 0 0;position:relative;">
+           <iframe id="contentFrame" sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen="true" scrolling="no" src="https://mafiatv.live/watch.php?stream=STARSPORTS1" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+       </div>
+   </div>
+   <!-- Join Telegram Button -->
+   <div class="join-telegram-container">
+       <button class="join-telegram-btn" onclick="window.open('https://t.me/+Abr6OELq5KZkZjNl', '_blank')">Join Telegram Channel</button>
+   </div>
 
-    <!-- Button to trigger the pop-up -->
-    <button id="joinTelegramButton">Join Our Telegram Channel</button>
+   <style>
+       .join-telegram-container {
+           margin-top: 20px;
+           text-align: center;
+       }
 
-    <!-- Pop-up Modal -->
-    <div id="telegramPopup">
-        <div id="popupContent">
-            <button id="closePopupButton">X</button>
-            <p>Click the link below to join our Telegram Channel:</p>
-            <a id="telegramLink" href="https://t.me/+lkbpBqFd0FljNzJl" target="_blank">Join Telegram</a>
-        </div>
-    </div>
+       .join-telegram-btn {
+           padding: 10px 20px;
+           font-size: 16px;
+           font-weight: bold;
+           color: white;
+           background-color: #008fd6;
+           border: none;
+           border-radius: 5px;
+           cursor: pointer;
+           box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+       }
 
-    <script>
-        // Initialize the Shaka Player after the page loads
-        window.onload = function () {
-            var video = document.getElementById('video');
-            var player = new shaka.Player(video);
+       .join-telegram-btn:hover {
+           background-color: #006bb3;
+       }
+   </style>
 
-            // Check if the browser supports the required DRM
-            if (shaka.Player.isBrowserSupported()) {
-                // Attach the player to the video element
-                player.configure({
-                    drm: {
-                        clearKeys: {
-                            '1779c27b9d077a3ba0c9cc1bb9a94b9f': 'cc5cf3b7928fb9e0a1ee6a8b566f0a8e' // ClearKey license key
-                        }
-                    }
-                });
+   <script>
+       // Close popup function
+       function closePopup() {
+           const popup = document.getElementById('popup');
+           popup.style.display = 'none';
+       }
 
-                // Load the MPD URL
-                player.load('https://a201aivottlinear-a.akamaihd.net/OTTB/lhr-nitro/clients/dash/enc/f60kqesunw/out/v1/a435ed7a00f947deb4369b46d8f2fb70/cenc.mpd?|drmScheme=clearkey&drmLicense=1779c27b9d077a3ba0c9cc1bb9a94b9f:cc5cf3b7928fb9e0a1ee6a8b566f0a8e')
-                    .then(function () {
-                        console.log('The video has loaded successfully!');
-                    })
-                    .catch(function (error) {
-                        console.error('Error loading the video', error);
-                    });
-            } else {
-                console.error('Browser not supported');
-            }
-        };
+       // Prevent redirect and show a custom message or just block the redirection
+       function preventRedirect(event) {
+           event.preventDefault(); // This will stop the link from opening
+           alert("Redirecting is blocked in this test mode."); // Show an alert as an example
+       }
 
-        // Show the pop-up when the button is clicked
-        var joinTelegramButton = document.getElementById('joinTelegramButton');
-        var telegramPopup = document.getElementById('telegramPopup');
-        var closePopupButton = document.getElementById('closePopupButton');
+       // Event listeners for links or buttons
+       document.querySelector('.join-btn').addEventListener('click', preventRedirect); // Prevent redirection when clicking the join button
+       document.querySelector('.join-telegram-btn').addEventListener('click', preventRedirect); // Prevent redirection for Telegram button
+   </script>
 
-        joinTelegramButton.onclick = function() {
-            telegramPopup.style.display = 'flex'; // Show the pop-up
-        };
+   <div id="popup" style="display: none;">
+       <div class="popup-content">
+           <h2>Support Us!</h2>
+           <p>Join Our Telegram Channel @teamrohitoffical45</p>
+           <button class="join-btn" onclick="window.open('https://t.me/+Abr6OELq5KZkZjNl', '_blank')">Join Now</button>
+           <button class="close-btn" onclick="closePopup()">Already Joined</button>
+       </div>
+   </div>
 
-        // Close the pop-up when the close button (X) is clicked
-        closePopupButton.onclick = function() {
-            telegramPopup.style.display = 'none'; // Hide the pop-up
-        };
-
-        // Close the pop-up if user clicks outside the modal content
-        window.onclick = function(event) {
-            if (event.target == telegramPopup) {
-                telegramPopup.style.display = 'none';
-            }
-        };
-    </script>
+   <script>
+       // Show the alert
+       if (confirm("Join Our Telegram Channel @TeamRohit45Official")) {
+           // Redirect to the Telegram channel if 'OK' is clicked
+           window.location.href = "https://t.me/+Abr6OELq5KZkZjNl";
+       } else {
+           // Close the alert if 'Cancel' is clicked (do nothing)
+       }
+   </script>
 
 </body>
 </html>
