--- a/index.html
+++ b/index.html
@@ -1,204 +1,123 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEAMROHITOFFICAL45</title>
-    <style>
-        /* General Page Styling */
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background: linear-gradient(135deg, #242424, #3b5998);
-            color: #fff;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            text-align: center;
-        }
-
-        /* Bingewav Sports Logo Section */
-        .logo-container {
-            background: #000; /* Black background for the logo */
-            padding: 15px;
-            border-radius: 10px;
-            margin-bottom: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
-        }
-
-        .logo-container img {
-            width: 220px; /* Adjust the logo size */
-            height: auto;
-        }
-
-        /* Video Player Styling */
-        .player-container {
-            width: 95%;
-            max-width: 1200px;
-            margin: 20px auto;
-            box-shadow: 0 6px 25px rgba(0, 0, 0, 0.4);
-            border-radius: 15px;
-            overflow: hidden;
-            background: #000; /* Black background behind the video for better focus */
-        }
-
-        .player-container iframe {
-            border-radius: 15px;
-        }
-
-        /* Stream Issue Section */
-        .stream-issue {
-            margin-top: 20px;
-            padding: 15px 20px;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 10px;
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            font-size: 16px;
-            color: #fff;
-            width: fit-content;
-            text-align: center;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
-        }
-
-        .stream-issue a {
-            color: #00c1ff;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        .stream-issue a:hover {
-            text-decoration: underline;
-        }
-
-        /* Credits Section */
-        .credits {
-            margin-top: 25px;
-            padding: 15px 25px;
-            background: rgba(255, 255, 255, 0.1);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            border-radius: 15px;
-            font-size: 16px;
-            color: #fff;
-            width: fit-content;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
-            display: inline-block;
-        }
-
-        .credits-title {
-            font-size: 18px;
-            font-weight: bold;
-            margin-bottom: 8px;
-        }
-
-        .credits a {
-            color: #ffcc00;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        .credits a:hover {
-            text-decoration: underline;
-        }
-
-        /* Responsive Adjustments */
-        @media (max-width: 768px) {
-            .logo-container img {
-                width: 180px;
-            }
-
-            .credits, .stream-issue {
-                font-size: 14px;
-                padding: 10px 20px;
-            }
-
-            .credits-title {
-                font-size: 16px;
-            }
-        }
-    </style>
-    <style type="text/css">
-        * {user-select: auto !important; -webkit-user-select: auto !important;}
-    </style>
-    <input type="hidden" id="inject_idm_text_selection">
+  <meta charset="UTF-8">
+  <title>TEAMROHITOFFICAL45_LIVE</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="//content.jwplatform.com/libraries/SAHhwvZq.js"></script>
+  <style>
+    body {
+      margin: 0;
+      background: black;
+    }
+    .jwplayer {
+      position: absolute !important;
+    }
+    .jwplayer.jw-flag-aspect-mode {
+      min-height: 100%;
+      max-height: 100%;
+    }
+    .popup {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 280px;
+      height: 280px;
+      background: rgba(20, 20, 20, 0.9);
+      padding: 20px;
+      border-radius: 15px;
+      text-align: center;
+      box-shadow: 0px 0px 20px rgba(255, 0, 0, 0.5);
+      color: white;
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      backdrop-filter: blur(10px);
+      border: 2px solid rgba(255, 255, 255, 0.2);
+    }
+    .popup h2 {
+      color: yellow;
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
+    .popup p {
+      font-size: 14px;
+      margin-bottom: 20px;
+    }
+    .popup button {
+      width: 90%;
+      padding: 12px;
+      font-size: 15px;
+      font-weight: bold;
+      cursor: pointer;
+      border: 3px solid rgba(255, 255, 255, 0.3);
+      border-radius: 8px;
+      transition: all 0.3s ease-in-out;
+      text-transform: uppercase;
+      box-shadow: 0px 5px 0px rgba(0, 0, 0, 0.3);
+    }
+    .join-btn {
+      background: linear-gradient(45deg, #ff0000, #cc0000);
+      color: white;
+      box-shadow: 0 0 10px red;
+      animation: glow 1s infinite alternate;
+    }
+    @keyframes glow {
+      0% { box-shadow: 0 0 10px red; }
+      100% { box-shadow: 0 0 20px red; }
+    }
+    .join-btn:hover {
+      background: linear-gradient(45deg, #cc0000, #990000);
+      transform: scale(1.05);
+    }
+    .joined-btn {
+      background: linear-gradient(45deg, #444, #333);
+      color: white;
+      margin-top: 10px;
+    }
+    .joined-btn:hover {
+      background: linear-gradient(45deg, #555, #444);
+      transform: scale(1.05);
+    }
+  </style>
 </head>
 <body>
 
-   <!-- Video Player Section -->
-   <div class="player-container">
-       <div style="padding:56.25% 0 0 0;position:relative;">
-           <iframe id="contentFrame" sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen="true" scrolling="no" src="https://mafiatv.live/watch.php?stream=STARSPORTS1" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
-       </div>
-   </div>
-   <!-- Join Telegram Button -->
-   <div class="join-telegram-container">
-       <button class="join-telegram-btn" onclick="window.open('https://t.me/+Abr6OELq5KZkZjNl', '_blank')">Join Telegram Channel</button>
-   </div>
+  <div id="jwplayerDiv"></div>
 
-   <style>
-       .join-telegram-container {
-           margin-top: 20px;
-           text-align: center;
-       }
+  <div class="popup" id="telegramPopup">
+    <h2>Support Us!</h2>
+    <p>Join our Telegram channel <b>@teamrohitoffical45</b> for more updates.</p>
+    <button class="join-btn" onclick="window.open('https://t.me/+Abr6OELq5KZkZjNl', '_blank'); closePopup();">Join Now and Support Us</button>
+    <button class="joined-btn" onclick="closePopup()">Already Joined</button>
+  </div>
 
-       .join-telegram-btn {
-           padding: 10px 20px;
-           font-size: 16px;
-           font-weight: bold;
-           color: white;
-           background-color: #008fd6;
-           border: none;
-           border-radius: 5px;
-           cursor: pointer;
-           box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-       }
+  <script>
+    jwplayer("jwplayerDiv").setup({
+      file: "https://astro-cricket-iota.vercel.app/2504/default_ott.mpd|drmScheme=",
+      type: "dash",
+      autostart: true,
+      preload: "auto",
+      stretching: "uniform",
+      width: "100%",
+      mute: true,
+      hlshtml: true,
+      liveSync: true,
+      bufferlength: 3,
+      drm: {
+        clearkey: {
+          keyId: "03c2e0af2f8159f9f0ce9b5dbc865f10",
+          key: "cd84ed136b0cc71f8ab8cd4d4f6a2e4c"
+        }
+      }
+    });
 
-       .join-telegram-btn:hover {
-           background-color: #006bb3;
-       }
-   </style>
-
-   <script>
-       // Close popup function
-       function closePopup() {
-           const popup = document.getElementById('popup');
-           popup.style.display = 'none';
-       }
-
-       // Prevent redirect and show a custom message or just block the redirection
-       function preventRedirect(event) {
-           event.preventDefault(); // This will stop the link from opening
-           alert("Redirecting is blocked in this test mode."); // Show an alert as an example
-       }
-
-       // Event listeners for links or buttons
-       document.querySelector('.join-btn').addEventListener('click', preventRedirect); // Prevent redirection when clicking the join button
-       document.querySelector('.join-telegram-btn').addEventListener('click', preventRedirect); // Prevent redirection for Telegram button
-   </script>
-
-   <div id="popup" style="display: none;">
-       <div class="popup-content">
-           <h2>Support Us!</h2>
-           <p>Join Our Telegram Channel @teamrohitoffical45</p>
-           <button class="join-btn" onclick="window.open('https://t.me/+Abr6OELq5KZkZjNl', '_blank')">Join Now</button>
-           <button class="close-btn" onclick="closePopup()">Already Joined</button>
-       </div>
-   </div>
-
-   <script>
-       // Show the alert
-       if (confirm("Join Our Telegram Channel @TeamRohit45Official")) {
-           // Redirect to the Telegram channel if 'OK' is clicked
-           window.location.href = "https://t.me/+Abr6OELq5KZkZjNl";
-       } else {
-           // Close the alert if 'Cancel' is clicked (do nothing)
-       }
-   </script>
+    function closePopup() {
+      document.getElementById("telegramPopup").style.display = "none";
+    }
+  </script>
 
 </body>
 </html>
