--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>TEAMROHITOFFICAL45_LIVE</title>
@@ -16,6 +18,7 @@
       min-height: 100%;
       max-height: 100%;
     }
+    /* Premium Telegram Popup */
     .popup {
       position: fixed;
       top: 50%;
@@ -46,6 +49,7 @@
       font-size: 14px;
       margin-bottom: 20px;
     }
+    /* Premium Button Styling */
     .popup button {
       width: 90%;
       padding: 12px;
@@ -58,6 +62,7 @@
       text-transform: uppercase;
       box-shadow: 0px 5px 0px rgba(0, 0, 0, 0.3);
     }
+    /* Premium Glowing Red Button */
     .join-btn {
       background: linear-gradient(45deg, #ff0000, #cc0000);
       color: white;
@@ -72,6 +77,7 @@
       background: linear-gradient(45deg, #cc0000, #990000);
       transform: scale(1.05);
     }
+    /* Premium Gray Button */
     .joined-btn {
       background: linear-gradient(45deg, #444, #333);
       color: white;
@@ -87,6 +93,7 @@
 
   <div id="jwplayerDiv"></div>
 
+  <!-- Premium Telegram Popup -->
   <div class="popup" id="telegramPopup">
     <h2>Support Us!</h2>
     <p>Join our Telegram channel <b>@teamrohitoffical45</b> for more updates.</p>
@@ -96,16 +103,11 @@
 
   <script>
     jwplayer("jwplayerDiv").setup({
-      file: "https://astro-cricket-iota.vercel.app/2504/default_ott.mpd|drmScheme=",
+      file: "https://astro-cricket-iota.vercel.app/2504/default_ott.mpd",
       type: "dash",
       autostart: true,
-      preload: "auto",
       stretching: "uniform",
       width: "100%",
-      mute: true,
-      hlshtml: true,
-      liveSync: true,
-      bufferlength: 3,
       drm: {
         clearkey: {
           keyId: "03c2e0af2f8159f9f0ce9b5dbc865f10",
